--- a/src/main/resources/fxml/main/Main.fxml
+++ b/src/main/resources/fxml/main/Main.fxml
@@ -3,11 +3,13 @@
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
+<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
 
-<BorderPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" styleClass="background" stylesheets="@../../css/barcamp.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.MainController">
-   <top>
-      <MenuBar BorderPane.alignment="CENTER">
+
+<AnchorPane prefHeight="304.0" prefWidth="351.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.MainController">
+   <children>
+      <MenuBar prefHeight="30.0" prefWidth="351.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
           <Menu mnemonicParsing="false" text="Procesos">
             <items>
@@ -24,5 +26,6 @@
           </Menu>
         </menus>
       </MenuBar>
-   </top>
-</BorderPane>
+      <BorderPane layoutY="29.0" prefHeight="275.0" prefWidth="351.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
+   </children>
+</AnchorPane>
