Incluyendo opción para rifa navideña

--- a/src/main/resources/fxml/pantallas/GeneradorSorteo.fxml
+++ b/src/main/resources/fxml/pantallas/GeneradorSorteo.fxml
@@ -6,10 +6,10 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="377.0" prefWidth="455.0" styleClass="background" stylesheets="@../../css/barcamp.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.GeneradorSorteoController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="305.0" prefWidth="455.0" stylesheets="@../../css/barcamp.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.GeneradorSorteoController">
    <children>
       <Button fx:id="botonGeneracion" layoutX="158.0" layoutY="52.0" mnemonicParsing="false" onAction="#generarRifa" prefHeight="26.0" prefWidth="143.0" text="Buscar Ganador" AnchorPane.leftAnchor="158.0" AnchorPane.rightAnchor="153.0" AnchorPane.topAnchor="52.0" />
-      <Pane fx:id="panelImagen" layoutX="26.0" layoutY="91.0" prefHeight="268.0" prefWidth="406.0" AnchorPane.bottomAnchor="18.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="90.0" />
+      <Pane fx:id="panelImagen" layoutX="26.0" layoutY="91.0" prefHeight="187.0" prefWidth="407.0" AnchorPane.bottomAnchor="28.0" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="90.0" />
       <Label fx:id="lbPremio" alignment="CENTER" contentDisplay="CENTER" layoutX="26.0" layoutY="6.0" prefHeight="40.0" prefWidth="406.0" text="RIFA" textAlignment="CENTER" AnchorPane.leftAnchor="26.0" AnchorPane.rightAnchor="22.0" AnchorPane.topAnchor="6.0">
          <font>
             <Font size="33.0" />
