--- a/src/main/resources/fxml/main/MainBarcamp.fxml
+++ b/src/main/resources/fxml/main/MainBarcamp.fxml
@@ -4,8 +4,9 @@
 <?import javafx.scene.control.MenuBar?>
 <?import javafx.scene.control.MenuItem?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.StackPane?>
 
-<AnchorPane prefHeight="479.0" prefWidth="683.0" styleClass="background" stylesheets="@../../css/barcamp.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.MainController">
+<AnchorPane prefHeight="479.0" prefWidth="683.0" styleClass="background" stylesheets="@../../css/navidad.css" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.MainController">
    <children>
       <MenuBar prefHeight="30.0" prefWidth="351.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <menus>
@@ -24,5 +25,10 @@
           </Menu>
         </menus>
       </MenuBar>
+      <AnchorPane layoutX="181.0" layoutY="30.0" prefHeight="188.0" prefWidth="321.0" styleClass="imageneArriba" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="181.0" AnchorPane.topAnchor="30.0" />
+      <AnchorPane layoutY="29.0" prefHeight="450.0" prefWidth="182.0" styleClass="imagenes" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.topAnchor="29.0" />
+      <AnchorPane layoutX="501.0" layoutY="29.0" prefHeight="450.0" prefWidth="182.0" styleClass="imagenes" AnchorPane.bottomAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="29.0" />
+      <AnchorPane layoutX="181.0" layoutY="291.0" prefHeight="188.0" prefWidth="321.0" styleClass="imageneAbajo" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="181.0" />
+      <StackPane fx:id="panelRifa" layoutX="181.0" layoutY="219.0" AnchorPane.bottomAnchor="193.0" AnchorPane.leftAnchor="181.0" AnchorPane.rightAnchor="181.0" AnchorPane.topAnchor="219.0" />
    </children>
 </AnchorPane>
