Incluyendo el control de los participantes no presentes. Manejando el control de los ganadores en los participantes. Mejorando la forma de buscar el ganador.

--- a/src/main/resources/fxml/main/Main.fxml
+++ b/src/main/resources/fxml/main/Main.fxml
@@ -14,6 +14,7 @@
             <items>
               <MenuItem mnemonicParsing="false" onAction="#poblacionRifa" text="Población Rifa" />
                   <MenuItem mnemonicParsing="false" onAction="#listaGanadores" text="Ganadores" />
+                  <MenuItem mnemonicParsing="false" onAction="#noPresentes" text="No Presentes" />
                   <MenuItem mnemonicParsing="false" onAction="#poblacionRifa" text="Rifas" />
                   <MenuItem mnemonicParsing="false" onAction="#cerrar" text="Close" />
             </items>
