--- a/src/main/resources/fxml/pantallas/PoblacionRifaNoPresente.fxml
+++ b/src/main/resources/fxml/pantallas/PoblacionRifaNoPresente.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.AnchorPane?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.65" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.PoblacionRifaNoPresenteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="edu.pucmm.rifa.controladores.main.PoblacionRifaNoPresenteController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Buscar:" />
       <TextField layoutX="63.0" layoutY="9.0" prefHeight="26.0" prefWidth="278.0" />
@@ -18,6 +18,8 @@
           <TableColumn fx:id="cedulaCol" prefWidth="75.0" text="Cédula" />
             <TableColumn fx:id="nombreCol" prefWidth="75.0" text="Nombre" />
             <TableColumn fx:id="departamentoCol" prefWidth="75.0" text="Departamento" />
+            <TableColumn fx:id="posicionCol" prefWidth="75.0" text="Posición" />
+            <TableColumn fx:id="campusCol" prefWidth="75.0" text="Campus" />
         </columns>
          <columnResizePolicy>
             <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
